TGR-1404: Reverse Proxy with POP should establish connection immediatly